--- a/Capitulos/cap1.tex
+++ b/Capitulos/cap1.tex
@@ -30,3 +30,21 @@ Definimos $\Omega_{\mathcal{S}}$ como el estado canónico que está restringido 
 \begin{equation}
  \Omega_{\mathcal{S}} =Tr_{\mathcal{E}} \mathcal{E_{R}}.
 \end{equation}
+
+Aquí se hace un supuesto importante y es que el universo está en un estado puro $\ket{\phi}$ y no en un estado mixto $\mathcal{E_{R}}$, esto quiere decir que se conoce todo lo que es permitido por la mecánica cuántica del universo si estuviese en un estado mixto significaría que nosotros no tenemos toda la información que se pudiese tener. Ahora lo que se quiere ver es que aun que el estado del universo sea puro el estado reducido del sistema,
+
+\begin{equation}
+\rho_{S}=Tr_{E}\ket{\phi}\bra{\phi} 
+\end{equation}
+
+se acerca al estado canónico para la gran mayoría de los casos 
+
+\begin{equation}
+\rho_{S}=\Omega_{S}.
+\end{equation}
+
+O sea que para casi todos los estados puros $\ket{\phi} \in \mathcal{H_{R}}$ del universo el sistema se comporta como si el universo estuviese en el estado mixto equiprobable $\mathcal{E_{R}}$. Siendo este el principio general canónico.
+
+Clarificando la idea, el estado canónico $\Omega_{S}$ del sistema es el estado del sistema cuando el universo se encuentra en el estado equiprobable $\mathcal{E_{R}}$. Se puede interpretar el principio general canónico como un principio que estipula que las probabilidades iguales del sistema son aparentes. Porque para casi cualquier estado del universo que sea puro, un subsistema de este universo que cumpla con ser lo suficientemente pequeño se comporta como si el universo estuviese en el estado equiprobable $\mathcal{E_{R}}$. Cabe recordar que aún no se ha especificado la restricción $R$ entonces todo este análisis es general, la restricción no necesariamente debe ser la energía u otras cantidades que se conserven. Esto hace que $\Omega_{S}$ no  deba ser obligatoriamente es el estado canónico usual, puede ser el gran canónico o cualquier otro que sea acorde con la restricción. Este principio puede ser de utilidad cuando la interacción entre el ambiente y el sistema no es débil como siempre se toma.
+
+
