--- a/main.tex
+++ b/main.tex
@@ -4,6 +4,7 @@
 \usepackage[paperwidth=17cm, paperheight=22.5cm, bottom=2.5cm, right=2.5cm]{geometry}
 \usepackage{amssymb,amsmath,amsthm} %paquete para símbolo matemáticos
 \usepackage{bbm}
+\usepackage{physics}
 \usepackage[spanish]{babel}
 \usepackage[utf8]{inputenc} %Paquete para escribir acentos y otros símbolos directamente
 \usepackage{enumerate}
