--- a/main.tex
+++ b/main.tex
@@ -3,6 +3,7 @@
 \documentclass[11pt]{book}
 \usepackage[paperwidth=17cm, paperheight=22.5cm, bottom=2.5cm, right=2.5cm]{geometry}
 \usepackage{amssymb,amsmath,amsthm} %paquete para símbolo matemáticos
+\usepackage{amsmath,amsfonts}
 \usepackage{bbm}
 \usepackage{physics}
 \usepackage[spanish]{babel}
@@ -133,6 +134,7 @@
 %----------------------------------------------------------------------------------------
 %	AGRADECIMIENTOS
 %----------------------------------------------------------------------------------------
+
 
 \chapter*{Agradecimientos}
 %\markboth{AGRADECIMIENTOS23}{AGRADECIMIENTOS} % encabezado 
