--- a/main.tex
+++ b/main.tex
@@ -82,7 +82,7 @@
 
 \textsc{\Large 	GERMÁN EDUARDO OSORIO LEIVA}\\[1em]
 
-\textsc{\large Asesor: }
+\textsc{\large Asesor: Alonso Botero Mejía}
 
 \end{center}
 
@@ -99,7 +99,7 @@
 \thispagestyle{empty}
 \vspace*{\fill}
 \begingroup
-``Con fundamento en los artículos 21 y 27 de la Ley Federal del Derecho de Autor y como titular de los derechos moral y patrimonial de la obra titulada ``\textbf{TÍTULO DE LA TESIS}'', otorgo de manera gratuita y permanente al Instituto Tecnológico Autónomo de México y a la Biblioteca Raúl Bailléres Jr., la autorización para que fijen la obra en cualquier medio, incluido el electrónico, y la divulguen entre sus usuarios, profesores, estudiantes o terceras personas, sin que pueda percibir por tal divulgación una contraprestación''.
+%``Con fundamento en los artículos 21 y 27 de la Ley Federal del Derecho de Autor y como titular de los derechos moral y patrimonial de la obra titulada ``\textbf{TÍTULO DE LA TESIS}'', otorgo de manera gratuita y permanente al Instituto Tecnológico Autónomo de México y a la Biblioteca Raúl Bailléres Jr., la autorización para que fijen la obra en cualquier medio, incluido el electrónico, y la divulguen entre sus usuarios, profesores, estudiantes o %terceras personas, sin que pueda percibir por tal divulgación una contraprestación''.
 
 \centering
 
@@ -136,9 +136,9 @@
 %----------------------------------------------------------------------------------------
 
 
-\chapter*{Agradecimientos}
+%\chapter*{Agradecimientos}
 %\markboth{AGRADECIMIENTOS23}{AGRADECIMIENTOS} % encabezado 
-Gracias a mis padres.
+%Gracias a mis padres.
 
 
 
@@ -146,19 +146,19 @@ Gracias a mis padres.
 %	PREFACIO
 %----------------------------------------------------------------------------------------
 
-\chapter*{Prefacio}
+%\chapter*{Prefacio}
 
-\pagestyle{plain}
+%\pagestyle{plain}
 %\markboth{PREFACIO23}{PREFACIO} % encabezado 
 
-PUEDEN QUITAR ESTA PARTE
+%PUEDEN QUITAR ESTA PARTE
 
 
 %----------------------------------------------------------------------------------------
 %	TABLA DE CONTENIDOS
 %---------------------------------------------------------------------------------------
 
-\tableofcontents
+%\tableofcontents
 
 
 %----------------------------------------------------------------------------------------
@@ -172,8 +172,8 @@ PUEDEN QUITAR ESTA PARTE
 
 \include{Capitulos/cap1}
 \thispagestyle{empty}
-\include{Capitulos/Conclusiones}
-\thispagestyle{empty}
+%\include{Capitulos/Conclusiones}
+%\thispagestyle{empty}
 
 
 %----------------------------------------------------------------------------------------
@@ -186,8 +186,8 @@ PUEDEN QUITAR ESTA PARTE
 
 %  Incluye los apéndices en el folder de apéndices
 
-\include{Apendices/Ap}
-\thispagestyle{empty}
+%\include{Apendices/Ap}
+%\thispagestyle{empty}
 %\include{Apendices/AppendixB}
 %\include{Apendices/AppendixC}
 
