preliminares y cap3 iniciados

--- a/main.tex
+++ b/main.tex
@@ -169,11 +169,14 @@
 
 %  Incluye los capítulos en el folder de capítulos
 
-
-\include{Capitulos/cap1}
+\include{Capitulos/preliminares}
 \thispagestyle{empty}
-%\include{Capitulos/Conclusiones}
-%\thispagestyle{empty}
+\include{Capitulos/cap2}
+\thispagestyle{empty}
+\include{Capitulos/cap3}
+\thispagestyle{empty}
+\include{Capitulos/Conclusiones}
+\thispagestyle{empty}
 
 
 %----------------------------------------------------------------------------------------
